; ModuleID = '/home/carl/AnghaBench/jemalloc/src/extr_extent.c_extent_try_delayed_coalesce.c'
source_filename = "/home/carl/AnghaBench/jemalloc/src/extr_extent.c_extent_try_delayed_coalesce.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@extent_state_active = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32**, i32*, i32*, i32*)* @extent_try_delayed_coalesce to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @extent_try_delayed_coalesce(i32* %0, i32* %1, i32** %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32**, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  store i32* %0, i32** %8, align 8
  store i32* %1, i32** %9, align 8
  store i32** %2, i32*** %10, align 8
  store i32* %3, i32** %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %15 = load i32*, i32** %13, align 8
  %16 = load i32, i32* @extent_state_active, align 4
  %17 = call i32 @extent_state_set(i32* %15, i32 %16)
  %18 = load i32*, i32** %8, align 8
  %19 = load i32*, i32** %9, align 8
  %20 = load i32**, i32*** %10, align 8
  %21 = load i32*, i32** %11, align 8
  %22 = load i32*, i32** %12, align 8
  %23 = load i32*, i32** %13, align 8
  %24 = call i32* @extent_try_coalesce(i32* %18, i32* %19, i32** %20, i32* %21, i32* %22, i32* %23, i32* %14, i32 0)
  store i32* %24, i32** %13, align 8
  %25 = load i32*, i32** %13, align 8
  %26 = load i32*, i32** %12, align 8
  %27 = call i32 @eset_state_get(i32* %26)
  %28 = call i32 @extent_state_set(i32* %25, i32 %27)
  %29 = load i32, i32* %14, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %32, label %31

31:                                               ; preds = %6
  store i32 1, i32* %7, align 4
  br label %37

32:                                               ; preds = %6
  %33 = load i32*, i32** %8, align 8
  %34 = load i32*, i32** %12, align 8
  %35 = load i32*, i32** %13, align 8
  %36 = call i32 @eset_insert_locked(i32* %33, i32* %34, i32* %35)
  store i32 0, i32* %7, align 4
  br label %37

37:                                               ; preds = %32, %31
  %38 = load i32, i32* %7, align 4
  ret i32 %38
}

declare dso_local i32 @extent_state_set(i32*, i32) #1

declare dso_local i32* @extent_try_coalesce(i32*, i32*, i32**, i32*, i32*, i32*, i32*, i32) #1

declare dso_local i32 @eset_state_get(i32*) #1

declare dso_local i32 @eset_insert_locked(i32*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
